--- a/app/src/main/res/layout/fragment_insights.xml
+++ b/app/src/main/res/layout/fragment_insights.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground">
@@ -59,7 +60,8 @@
                     app:layout_constraintTop_toBottomOf="@id/chartLabel1"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintDimensionRatio="1:1" />
+                    app:layout_constraintDimensionRatio="1:1"
+                    tools:ignore="MissingClass" />
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -88,7 +90,8 @@
                     app:layout_constraintTop_toBottomOf="@id/chartLabel2"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintDimensionRatio="1:1" />
+                    app:layout_constraintDimensionRatio="1:1"
+                    tools:ignore="MissingClass" />
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -117,7 +120,8 @@
                     app:layout_constraintTop_toBottomOf="@id/chartLabel3"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintDimensionRatio="1:1" />
+                    app:layout_constraintDimensionRatio="1:1"
+                    tools:ignore="MissingClass" />
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -146,7 +150,8 @@
                     app:layout_constraintTop_toBottomOf="@id/chartLabel4"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintDimensionRatio="1:1" />
+                    app:layout_constraintDimensionRatio="1:1"
+                    tools:ignore="MissingClass" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </GridLayout>
 
