Added Logout Btn

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -172,6 +172,20 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#CCC" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/logout_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="Logout"
+                android:backgroundTint="@color/primary"
+                android:textColor="?attr/colorOnError"
+                style="?attr/materialButtonOutlinedStyle" />
+        </LinearLayout>
     </LinearLayout>
-
 </ScrollView>
