Create adapter to fix lag

--- a/app/src/main/res/layout/fragment_goals.xml
+++ b/app/src/main/res/layout/fragment_goals.xml
@@ -42,11 +42,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- dynamic goal card test -->
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/goal_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:layout_height="wrap_content" />
 
     <!-- trophy section if needed? -->
         <LinearLayout
