Added User's Name to all Page Titles
# Conflicts:
#	app/src/main/java/com/drivingbuddy/ui/goals/GoalsFragment.java
#	app/src/main/java/com/drivingbuddy/ui/home/HomeFragment.java

--- a/app/src/main/res/layout/fragment_goals.xml
+++ b/app/src/main/res/layout/fragment_goals.xml
@@ -15,6 +15,7 @@
 
         <!-- Title -->
         <TextView
+            android:id="@+id/goals_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Goals"
