--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,7 @@
 
         <!-- Title -->
         <TextView
+            android:id="@+id/home_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/stats_title"
