--- a/app/src/main/res/layout/fragment_insights.xml
+++ b/app/src/main/res/layout/fragment_insights.xml
@@ -14,6 +14,7 @@
 
         <!-- Title -->
         <TextView
+            android:id="@+id/insights_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/insights_title"
