--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -183,7 +183,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="Logout"
-                android:backgroundTint="@color/primary"
+                android:backgroundTint="@color/onSurface"
                 android:textColor="?attr/colorOnError"
                 style="?attr/materialButtonOutlinedStyle" />
         </LinearLayout>
