--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.drivingbuddy.HomeFragment"
+        android:name="com.drivingbuddy.ui.home.HomeFragment"
         android:label="Home" />
 
     <fragment
