--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
-    tools:context="com.drivingbuddy.GoalsFragment">
+    tools:context="com.drivingbuddy.ui.goals.GoalsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
