--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/loginFragment">
 
@@ -22,8 +23,18 @@
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.drivingbuddy.SettingsFragment"
-        android:label="Settings" />
+        android:label="Settings">
+        <action
+            android:id="@+id/action_settings_to_profile"
+            app:destination="@+id/profileFragment" />
+    </fragment>
 
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.drivingbuddy.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile">
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.drivingbuddy.ui.auth.LoginFragment"
