--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
-    tools:context="com.drivingbuddy.SettingsFragment">
+    tools:context="com.drivingbuddy.ui.settings.SettingsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -155,7 +155,7 @@
                 android:id="@+id/permissions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Permissions"
+                android:text="@string/perms_title"
                 android:textSize="18sp"
                 android:textColor="?attr/colorOnBackground"
                 android:textStyle="normal" />
@@ -171,7 +171,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Logout"
+                android:text="@string/logout"
                 android:backgroundTint="@color/onSurface"
                 android:textColor="?attr/colorOnError"
                 style="?attr/materialButtonOutlinedStyle" />
