--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
-    tools:context="com.drivingbuddy.SettingsFragment">
+    tools:context="com.drivingbuddy.ui.settings.SettingsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,39 +76,11 @@
             android:id="@+id/setting_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Settings"
+            android:text="@string/settings_title"
             android:textColor="?attr/colorOnBackground"
             android:textStyle="bold"
             android:padding="8dp"
             android:textSize="26sp" />
-
-        <!-- Settings Options -->
-<!--        <LinearLayout-->
-<!--            android:id="@+id/personal_info_container"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:paddingVertical="12dp"-->
-<!--            android:paddingStart="16dp"-->
-<!--            android:paddingEnd="16dp"-->
-<!--            android:gravity="center_vertical"-->
-<!--            android:clickable="true"-->
-<!--            android:focusable="true"-->
-<!--            android:background="?attr/selectableItemBackground">-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/personal_info"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Personal Information"-->
-<!--                android:textSize="18sp"-->
-<!--                android:textColor="?attr/colorOnBackground"-->
-<!--                android:textStyle="normal" />-->
-<!--        </LinearLayout>-->
-<!--        <View-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="1dp"-->
-<!--            android:background="#CCC" />-->
 
         <LinearLayout
             android:id="@+id/data_collection_container"
@@ -128,11 +99,12 @@
                 android:id="@+id/data_collection"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Data Collection/ Privacy"
+                android:text="@string/privacy_title"
                 android:textSize="18sp"
                 android:textColor="?attr/colorOnBackground"
                 android:textStyle="normal" />
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -155,11 +127,12 @@
                 android:id="@+id/notifications"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Notifications"
+                android:text="@string/notifs_title"
                 android:textSize="18sp"
                 android:textColor="?attr/colorOnBackground"
                 android:textStyle="normal" />
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -182,15 +155,12 @@
                 android:id="@+id/permissions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Permissions"
+                android:text="@string/perms_title"
                 android:textSize="18sp"
                 android:textColor="?attr/colorOnBackground"
                 android:textStyle="normal" />
         </LinearLayout>
-<!--        <View-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="1dp"-->
-<!--            android:background="#CCC" />-->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -201,7 +171,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Logout"
+                android:text="@string/logout"
                 android:backgroundTint="@color/onSurface"
                 android:textColor="?attr/colorOnError"
                 style="?attr/materialButtonOutlinedStyle" />
