--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/custom_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/primary"
+    android:background="@color/primaryVariant"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:title=""
     app:contentInsetStart="0dp">
