--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_profile"
+        android:title="@string/profile_title" />
+    <item
         android:id="@+id/menu_data_collection"
         android:title="@string/privacy_title" />
     <item
