--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,17 +24,12 @@
         android:id="@+id/settingsFragment"
         android:name="com.drivingbuddy.ui.settings.SettingsFragment"
         android:label="Settings">
-        <action
-            android:id="@+id/action_settings_to_profile"
-            app:destination="@+id/profileFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.drivingbuddy.ProfileFragment"
-        android:label="Profile"
-        tools:layout="@layout/fragment_profile">
-    </fragment>
+        android:label="Profile" />
 
     <fragment
         android:id="@+id/loginFragment"
