--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,6 +22,32 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/profile_avatar"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:scaleType="centerCrop"
+                android:contentDescription="Profile photo"
+                android:src="@drawable/ic_badge" />
+
+            <ImageButton
+                android:id="@+id/profile_avatar_change"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="bottom|end"
+                android:padding="4dp"
+                android:src="@drawable/ic_edit"
+                android:contentDescription="Change profile photo"
+                android:background="?attr/selectableItemBackgroundBorderless" />
+        </FrameLayout>        
+
         <!-- Name Section -->
         <LinearLayout
             android:layout_width="match_parent"
