--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
+    android:id="@+id/settings_container"
     tools:context="com.drivingbuddy.ui.settings.SettingsFragment">
 
     <LinearLayout
@@ -36,17 +37,31 @@
             android:clickable="true"
             android:focusable="true"
             android:background="?attr/selectableItemBackground">
-            <ImageView
-                android:id="@+id/profile_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/ic_badge"
-                android:contentDescription="Profile Picture"
-                android:scaleType="centerCrop"
-                android:layout_marginEnd="16dp"
-                android:clipToOutline="true"
-                android:outlineProvider="background"
-                android:layout_gravity="center"/>
+
+            <FrameLayout
+                android:layout_width="88dp"
+                android:layout_height="88dp"
+                android:layout_marginEnd="16dp">
+                <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="88dp"
+                    android:layout_height="88dp"
+                    android:src="@drawable/ic_badge"
+                    android:contentDescription="Profile Picture"
+                    android:scaleType="centerCrop"
+                    android:clipToOutline="true"
+                    android:outlineProvider="background"
+                    android:layout_gravity="center"/>
+
+                <ImageView
+                    android:id="@+id/edit_profile_image"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_edit"
+                    android:contentDescription="Change profile picture"
+                    android:visibility="invisible"/>
+            </FrameLayout>
 
             <TextView
                 android:id="@+id/profile_name"
